[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Tab.gd" type="Script" id=1]

[node name="Tab" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -47.3864, 72.3574 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Menu"]
margin_top = 5.0
margin_right = 134.0
margin_bottom = 19.0
text = "Emitter Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name_Input" type="LineEdit" parent="Menu"]
margin_left = 138.0
margin_right = 271.0
margin_bottom = 24.0
text = "Default_Emitter"

[node name="HBoxContainer3" type="HBoxContainer" parent="Menu"]
margin_top = 28.0
margin_right = 134.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X" type="Label" parent="Menu/HBoxContainer3"]
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
text = "X            "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X_Input" type="SpinBox" parent="Menu/HBoxContainer3"]
margin_left = 60.0
margin_right = 134.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer4" type="HBoxContainer" parent="Menu"]
margin_left = 138.0
margin_top = 28.0
margin_right = 271.0
margin_bottom = 52.0

[node name="Y" type="Label" parent="Menu/HBoxContainer4"]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 19.0
text = "Y            "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Y_Input" type="SpinBox" parent="Menu/HBoxContainer4"]
margin_left = 59.0
margin_right = 133.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotation" type="Label" parent="Menu"]
margin_top = 61.0
margin_right = 134.0
margin_bottom = 75.0
text = "Angle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotation_Input" type="SpinBox" parent="Menu"]
margin_left = 138.0
margin_top = 56.0
margin_right = 271.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SprayCooldown" type="Label" parent="Menu"]
margin_top = 89.0
margin_right = 134.0
margin_bottom = 103.0
text = "Spray Cooldown "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SprayCooldown_Input" type="SpinBox" parent="Menu"]
margin_left = 138.0
margin_top = 84.0
margin_right = 271.0
margin_bottom = 108.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spread" type="Label" parent="Menu"]
margin_top = 125.0
margin_right = 134.0
margin_bottom = 139.0
text = "Cone Spread"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spread_Input" type="CheckButton" parent="Menu"]
margin_left = 138.0
margin_top = 112.0
margin_right = 271.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SprayCount" type="Label" parent="Menu"]
margin_top = 161.0
margin_right = 134.0
margin_bottom = 175.0
text = "Spray Count"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SprayCount_Input" type="SpinBox" parent="Menu"]
margin_left = 138.0
margin_top = 156.0
margin_right = 271.0
margin_bottom = 180.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConeAngle" type="Label" parent="Menu"]
margin_top = 189.0
margin_right = 134.0
margin_bottom = 203.0
text = "Cone Angle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConeAngle_Input" type="SpinBox" parent="Menu"]
margin_left = 138.0
margin_top = 184.0
margin_right = 271.0
margin_bottom = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpreadWidth" type="Label" parent="Menu"]
margin_top = 217.0
margin_right = 134.0
margin_bottom = 231.0
text = "Spray Width"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpreadWidth_Input" type="SpinBox" parent="Menu"]
margin_left = 138.0
margin_top = 212.0
margin_right = 271.0
margin_bottom = 236.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotation_Rate" type="Label" parent="Menu"]
margin_top = 245.0
margin_right = 134.0
margin_bottom = 259.0
text = "Rotation Rate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotation_Rate_Input" type="SpinBox" parent="Menu"]
margin_left = 138.0
margin_top = 240.0
margin_right = 271.0
margin_bottom = 264.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aim" type="Label" parent="Menu"]
margin_top = 281.0
margin_right = 134.0
margin_bottom = 295.0
text = "Aim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aim_Input" type="CheckButton" parent="Menu"]
margin_left = 138.0
margin_top = 268.0
margin_right = 271.0
margin_bottom = 308.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aim_Cooldown" type="Label" parent="Menu"]
margin_top = 317.0
margin_right = 134.0
margin_bottom = 331.0
text = "Aim Cooldown"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aim_Cooldown_Input" type="SpinBox" parent="Menu"]
margin_left = 138.0
margin_top = 312.0
margin_right = 271.0
margin_bottom = 336.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 340.0
margin_right = 134.0
margin_bottom = 364.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X_Offset" type="Label" parent="Menu/HBoxContainer"]
margin_top = 5.0
margin_right = 55.0
margin_bottom = 19.0
text = "X Offset:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Xoffset_Input" type="SpinBox" parent="Menu/HBoxContainer"]
margin_left = 59.0
margin_right = 133.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu"]
margin_left = 138.0
margin_top = 340.0
margin_right = 271.0
margin_bottom = 364.0

[node name="Y_Offset" type="Label" parent="Menu/HBoxContainer2"]
margin_top = 5.0
margin_right = 54.0
margin_bottom = 19.0
text = "Y Offset:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yoffset_Input" type="SpinBox" parent="Menu/HBoxContainer2"]
margin_left = 58.0
margin_right = 132.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadBullet" type="Button" parent="."]
margin_top = 404.637
margin_right = 146.0
margin_bottom = 424.637
text = "Load Bullet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadExisting" type="Button" parent="."]
margin_top = 437.176
margin_right = 146.0
margin_bottom = 457.176
text = "Load Existing Emitter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 176.201
margin_top = 437.176
margin_right = 268.201
margin_bottom = 457.176
text = "Save Current"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 217.0
window_title = "Open a File"
mode = 0

[node name="SaveDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 217.0

[node name="LoadWarning" type="AcceptDialog" parent="."]
margin_right = 201.0
margin_bottom = 58.0
dialog_text = "Unsaved changes will be lost"

[connection signal="value_changed" from="Menu/HBoxContainer3/X_Input" to="." method="_on_set_X"]
[connection signal="value_changed" from="Menu/HBoxContainer4/Y_Input" to="." method="_on_set_Y"]
[connection signal="value_changed" from="Menu/Rotation_Input" to="." method="_on_set_Angle"]
[connection signal="value_changed" from="Menu/SprayCooldown_Input" to="." method="_on_set_SprayCooldown"]
[connection signal="toggled" from="Menu/Spread_Input" to="." method="_on_SpreadEnabled"]
[connection signal="value_changed" from="Menu/SprayCount_Input" to="." method="_on_set_SprayCount"]
[connection signal="value_changed" from="Menu/ConeAngle_Input" to="." method="_on_set_ConeAngle"]
[connection signal="value_changed" from="Menu/SpreadWidth_Input" to="." method="_on_set_SpreadWidth"]
[connection signal="value_changed" from="Menu/Rotation_Rate_Input" to="." method="_on_set_RotationRate"]
[connection signal="toggled" from="Menu/Aim_Input" to="." method="_on_set_AimEnabled"]
[connection signal="value_changed" from="Menu/Aim_Cooldown_Input" to="." method="_on_set_AimCooldown"]
[connection signal="value_changed" from="Menu/HBoxContainer/Xoffset_Input" to="." method="_on_set_XOff"]
[connection signal="value_changed" from="Menu/HBoxContainer2/Yoffset_Input" to="." method="_on_set_YOff"]
[connection signal="pressed" from="LoadExisting" to="." method="_on_Load_emitter"]
[connection signal="pressed" from="Save" to="." method="_on_SaveEmitter"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_emtterSelected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_savePathSelected"]
[connection signal="confirmed" from="LoadWarning" to="." method="_on_acceptLoadWarning"]
